--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- First slide -->
     <div class="mySlides fade" style="display: block;">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
         <img class="pic" src="/images/Cover.jpg">
         <img style="height: 5vw; width: auto; float: left; margin-top: 1vw;" src="/images/Avatar.png">
         <div style="float: left; margin-top: 4vh; font-size: 200%; width: 80vh;">Welcome, My name is Whoo!</div>
@@ -31,7 +31,7 @@
     <!-- Second slide -->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
         <img class="avatar" src="/images/Avatar.png">
         <div id="firstError" style="display: none;" class="speech sb1">Please answer the question</div>
         <div id="firstSuccess" style="display: none;" class="speech sb1">Great job!</div>
@@ -50,7 +50,7 @@
     <!-- Third slide -->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
         <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s1.jpg">
         <div class="words">One day while Gingile was out hunting he heard the call of Ngede. Gingile’s mouth began to water at the thought of honey. He stopped and listened carefully, searching until he saw the bird in the branches above his head. “Chitik-chitik-chitik,” the little bird rattled, as he flew to the next tree, and the next. “Chitik, chitik, chitik,” he called, stopping from time to time to be sure that Gingile followed.</div>
@@ -60,7 +60,7 @@
     <!-- Fourth slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
         <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s2.jpg">
         <div class="words">After half an hour, they reached a huge wild fig tree. Ngede hopped about madly among the branches. He then settled on one branch and cocked his head at Gingile as if to say, “Here it is! Come now! What is taking you so long?” Gingile couldn’t see any bees from under the tree, but he trusted Ngede.</div>
@@ -70,7 +70,8 @@
     <!-- Fifth slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s3.jpg">
         <div class="words">So Gingile put down his hunting spear under the tree, gathered some dry twigs and made a small fire. When the fire was burning well, he put a long dry stick into the heart of the fire. This wood was especially known to make lots of smoke while it burned. He began climbing, holding the cool end of the smoking stick in his teeth.</div>
       </div>
@@ -79,7 +80,8 @@
     <!-- Sixth slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s4.jpg">
         <div class="words">Soon he could hear the loud buzzing of the busy bees. They were coming in and out of a hollow in the tree trunk – their hive. When Gingile reached the hive he pushed the smoking end of the stick into the hollow. The bees came rushing out, angry and mean. They flew away because they didn’t like the smoke – but not before they had given Gingile some painful stings!</div>
       </div>
@@ -88,7 +90,8 @@
     <!-- Seventh slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s5.jpg">
         <div class="words">When the bees were out, Gingile pushed his hands into the nest. He took out handfuls of the heavy comb, dripping with rich honey and full of fat, white grubs. He put the comb carefully in the pouch he carried on his shoulder, and started to climb down the tree.</div>
       </div>
@@ -97,7 +100,8 @@
      <!-- Eight slide-->
      <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s6.jpg">
         <div class="words">Ngede eagerly watched everything that Gingile was doing. He was waiting for him to leave a fat piece of honeycomb as a thank-you offering to the Honeyguide. Ngede flittered from branch to branch, closer and closer to the ground. Finally Gingile reached the bottom of the tree. Ngede perched on a rock near the boy and waited for his reward.</div>
       </div>
@@ -106,7 +110,8 @@
     <!-- Ninth slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s7.jpg">
         <div class="words">But, Gingile put out the fire, picked up his spear and started walking home, ignoring the bird. Ngede called out angrily, “VIC-torr! VIC-torrr!” Gingile stopped, stared at the little bird and laughed aloud. “You want some honey, do you, my friend? Ha! But I did all the work, and got all the stings. Why should I share any of this lovely honey with you?” Then he walked off. Ngede was furious! This was no way to treat him! But he would get his revenge.</div>
       </div>
@@ -115,7 +120,8 @@
     <!-- Tenth slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s8.jpg">
         <div class="words">One day several weeks later Gingile again heard the honey call of Ngede. He remembered the delicious honey, and eagerly followed the bird once again. After leading Gingile along the edge of the forest, Ngede stopped to rest in a great umbrella thorn. “Ahh,” thought Gingile. “The hive must be in this tree.” He quickly made his small fire and began to climb, the smoking branch in his teeth. Ngede sat and watched.</div>
       </div>
@@ -124,7 +130,8 @@
     <!-- Eleventh slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s9.jpg">
         <div class="words">Gingile climbed, wondering why he didn’t hear the usual buzzing. “Perhaps the hive is deep in the tree,” he thought to himself. He pulled himself up another branch. But instead of the hive, he was staring into the face of a leopard! Leopard was very angry at having her sleep so rudely interrupted. She narrowed her eyes, opened her mouth to reveal her very large and very sharp teeth.</div>
       </div>
@@ -133,7 +140,8 @@
     <!-- Twelfth slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s10.jpg">
         <div class="words">Before Leopard could take a swipe at Gingile, he rushed down the tree. In his hurry he missed a branch, and landed with a heavy thud on the ground twisting his ankle. He hobbled off as fast as he could. Luckily for him, Leopard was still too sleepy to chase him. Ngede, the Honeyguide, had his revenge. And Gingile learned his lesson.</div>
       </div>
@@ -142,7 +150,8 @@
     <!-- Thirteenth slide-->
     <div class="mySlides fade">
       <div class="slide">
-        <h1 style="text-align: center; font-size:300%">The Honeyguide's Revenge</h1>
+        <div class="title">The Honeyguide's Revenge</div>
+        <img class="avatar" src="/images/Avatar.png">
         <img class="pic" src="/images/s11.jpg">
         <div class="words">And so, when the children of Gingile hear the story of Ngede they have respect for the little bird. Whenever they harvest honey, they make sure to leave the biggest part of the comb for Honeyguide!</div>
       </div>
