--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   </div>
   
   <!-- The dots/circles -->
-  <div class="dots" id="c" style="text-align:center;">
+  <div class="dots" id="c" style="text-align:center; display: none;">
     <span class="dot" onclick="currentSlide(1)"></span>
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
